export const snapshot = {};

snapshot[`relative_url plugin 1`] = `5`;

snapshot[`relative_url plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`relative_url plugin 3`] = `
[
  {
    entry: "/statics/robots.txt",
    flags: [],
    outputPath: "/robots.txt",
  },
]
`;

snapshot[`relative_url plugin 4`] = `
{
  content: "<!DOCTYPE html>
" +
    "<html><head></head><body><p>First article</p>
" +
    '<p><a href="/drafts/second-article/">Go to second</a>
' +
    '<a href="/other/">Go to other</a>
' +
    '<a href="/">Go to index</a></p>
' +
    "</body></html>",
  data: {
    children: true,
    content: "<!-- deno-fmt-ignore-file -->
" +
      "
" +
      "First article
" +
      "
" +
      "[Go to second](./article-2.md)
" +
      "[Go to other](../other.md)
" +
      "[Go to index](/index.md)",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [],
    url: "/articles/first-article/",
  },
  dest: {
    ext: ".html",
    path: "/articles/first-article/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/articles/article-1",
    remote: undefined,
    slug: "article-1",
  },
}
`;

snapshot[`relative_url plugin 5`] = `
{
  content: "<!DOCTYPE html>
" +
    "<html><head></head><body><p>Second article</p>
" +
    '<p><a href="/articles/first-article/">Go to first</a>
' +
    '<a href="/other/">Go to other</a>
' +
    '<a href="/">Go to index</a></p>
' +
    "</body></html>",
  data: {
    children: true,
    content: "<!-- deno-fmt-ignore-file -->
" +
      "
" +
      "Second article
" +
      "
" +
      "[Go to first](article-1.md)
" +
      "[Go to other](../other.md)
" +
      "[Go to index](/index.md)",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [],
    url: "/drafts/second-article/",
  },
  dest: {
    ext: ".html",
    path: "/drafts/second-article/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/articles/article-2",
    remote: undefined,
    slug: "article-2",
  },
}
`;

snapshot[`relative_url plugin 6`] = `
{
  content: "<!DOCTYPE html>
" +
    '<html><head></head><body><p><a href="/bar">url</a>
' +
    '<a href="foo">url</a>
' +
    '<a href="./foo">url</a>
' +
    '<a href="../foo">url</a>
' +
    '<a href="#foo">url</a>
' +
    '<a href="?foo=bar">url</a>
' +
    '<a href="/other/">url</a>
' +
    '<a href="/other/">url</a>
' +
    '<a href="https://domain.com">url</a>
' +
    '<a href="/other/?tab=1">url</a>
' +
    '<a href="/other/#tab-1">url</a>
' +
    '<a href="/robots.txt">url</a>
' +
    '<a href="/tilde-and-ene/">url</a></p>
' +
    "</body></html>",
  data: {
    children: true,
    content: "<!-- deno-fmt-ignore-file -->
" +
      "[url](/bar)
" +
      "[url](foo)
" +
      "[url](./foo)
" +
      "[url](../foo)
" +
      "[url](#foo)
" +
      "[url](?foo=bar)
" +
      "[url](~/other.md)
" +
      "[url](other.md)
" +
      "[url](https://domain.com)
" +
      "[url](other.md?tab=1)
" +
      "[url](other.md#tab-1)
" +
      "[url](~/statics/robots.txt)
" +
      "[url](tílde-and-eñe.md)
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [],
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/index",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`relative_url plugin 7`] = `
{
  content: "<!DOCTYPE html>
" +
    "<html><head></head><body><p>Other page</p>
" +
    '<p><a href="/robots.txt">See robots.txt</a></p>
' +
    "</body></html>",
  data: {
    children: true,
    content: "Other page

[See robots.txt](statics/robots.txt)
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [],
    url: "/other/",
  },
  dest: {
    ext: ".html",
    path: "/other/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/other",
    remote: undefined,
    slug: "other",
  },
}
`;

snapshot[`relative_url plugin 8`] = `
{
  content: "<!DOCTYPE html>
" +
    "<html><head></head><body><p>Tilde and eñe</p>
" +
    "</body></html>",
  data: {
    children: true,
    content: "Tilde and eñe
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [],
    url: "/tilde-and-ene/",
  },
  dest: {
    ext: ".html",
    path: "/tilde-and-ene/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/tílde-and-eñe",
    remote: undefined,
    slug: "tílde-and-eñe",
  },
}
`;
